--- a/src/modules/ReservationRoom/components/Room/style.css
+++ b/src/modules/ReservationRoom/components/Room/style.css
@@ -4,12 +4,7 @@
 }
 
 .rr-room_day {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  padding-left: 5px;
-  width: 100%;
-  height: 120px;
+  flex: 1;
 }
 
 .rr-room {
@@ -23,6 +18,7 @@
 
 .rr-room_time {
   padding: 3px;
+  margin: 1px;
 }
 
 .rr-room_free-time {
@@ -32,4 +28,13 @@
 .rr-room_reserved-time {
   background-color: lightgrey;
   cursor: default;
+}
+
+@media (min-width: 860px) {
+  .rr-room_day {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    height: 120px;
+  }
 }
